track and update email used for job applications

--- a/webapp/src/App.scss
+++ b/webapp/src/App.scss
@@ -1,3 +1,9 @@
 .affix-shadow {
   box-shadow: var(--mantine-shadow-md);
 }
+
+.align-center {
+  display: flex;
+  align-items: center;
+  gap: 0.75ch;
+}
